2022-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-epackages): renamed to `find-epackages0'.
	(find-epackages): new function.
	(ee-goto-position-package, ee-packages-nline-for)
	(ee-packages-nlines-for, ee-packages-nlines-and-names): new
	functions.

	* eev-elinks.el (ee-find-epackage-links0): use the new
	`find-epackages', that has the same name as the old one but
	different arguments.

	* eev-hlinks.el (ee-packages-package-here): new function.
	(ee-find-epackages-links): use `ee-packages-package-here' and the
	new `find-epackages'.

2022-12-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-struct-to-triples, find-estructt): new
	functions.

2022-12-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-underlinewsp-re): new function.
	(ee-efunctiondescr-re): use `ee-underlinewsp-re'.

2022-12-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-eev2022pyvideo): new function.
	(ee-1stclassvideos-info): added an entry for "eev2022py".

2022-12-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-rstdoc-intro): added some sections.

	* eev-tlinks.el (find-rstdoc-links): use another name for the
	temporary buffer.

	* eev-videolinks.el (find-eev2022klavideo): new function.
	(ee-1stclassvideos-info): added an entry for "eev2022kla".

2022-12-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el (ee-code-rstdoc): added `find-{c}dochelp'.

	* eev-intro.el (find-rstdoc-intro): new function.
	(find-eev-intro): added an entry for `(find-rstdoc-intro)'.

	* eev-rstdoc.el (ee-rstdoc-getfield0): new function.

	* eev-tlinks.el (find-rstdoc-links): new function.

2022-12-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-kla-intro): added some sections.

2022-11-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-find-cfile): fixed a typo.

2022-11-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-intro): rewrote the section about
	keybindings.